--- a/player.html
+++ b/player.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>24/7 - Live Sports</title>
+  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/78013897?v=4">
   <style>
     body {
       margin: 0;
