--- a/player.html
+++ b/player.html
@@ -6,7 +6,7 @@
     src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>24/7 - Live Sports</title>
+  <title>BuffStreams - Live Streams</title>
   <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/78013897?v=4">
   <style>
     body {
