--- a/player.html
+++ b/player.html
@@ -2,201 +2,207 @@
 <html lang="en">
 
 <head>
-  <script type='text/javascript'
-    src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BuffStreams - Live Streams</title>
-  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/78013897?v=4">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #12161C;
-      color: #e7ffe7;
-    }
+    <script type='text/javascript'
+        src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BuffStreams - Live Streams</title>
+    <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/78013897?v=4">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', sans-serif;
+            background-color: #0d1117;
+            color: #e7ffe7;
+        }
 
-    .container {
-      display: flex;
-      justify-content: center;
-      padding: 30px 15px;
-    }
+        .container {
+            display: flex;
+            justify-content: center;
+            padding: 30px 15px;
+        }
 
-    .content-box {
-      background: #1e2430;
-      border-radius: 12px;
-      max-width: 1200px;
-      width: 100%;
-      display: flex;
-      padding: 20px;
-      border: 1px solid #3c4556; 
-      gap: 20px;
-    }
+        .content-box {
+            background: #161b22;
+            border-radius: 12px;
+            max-width: 1200px;
+            width: 100%;
+            display: flex;
+            padding: 20px;
+            border: 1px solid #30363d;
+            gap: 20px;
+        }
 
-    .main-content {
-      flex: 0 0 70%;
-    }
+        .main-content {
+            flex: 0 0 70%;
+        }
 
-    .ad-center {
-      display: flex;
-      justify-content: center;
-      margin: 10px 0;
-    }
+        .ad-center {
+            display: flex;
+            justify-content: center;
+            margin: 10px 0;
+        }
 
-    .iframe-container {
-      position: relative;
-      width: 100%;
-      padding-top: 56.25%;
-      border-radius: 10px;
-      overflow: hidden;
-      margin: 15px 0;
-    }
+        .iframe-container {
+            position: relative;
+            width: 100%;
+            padding-top: 56.25%;
+            border-radius: 10px;
+            overflow: hidden;
+            margin: 15px 0;
+        }
 
-    .post-icons {
-      display: none;
-    }
+        .post-icons {
+            display: none;
+        }
 
-    .iframe-container iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-      border-radius: 10px;
-    }
+        .iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 10px;
+        }
 
-    .sidebar {
-      flex: 0 0 30%;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
+        .sidebar {
+            flex: 0 0 30%;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
 
-    .sidebar .ad {
-      width: 100%;
-      overflow: hidden;
-    }
+        .sidebar .ad {
+            width: 100%;
+            overflow: hidden;
+        }
 
-    @media (max-width:768px) {
-      .container {
-        flex-direction: column;
-        padding: 10px;
-      }
+        @media (max-width:768px) {
+            .container {
+                flex-direction: column;
+                padding: 10px;
+            }
 
-      .content-box {
-        flex-direction: column;
-        padding: 10px;
-        align-items: center;
-      }
+            .content-box {
+                flex-direction: column;
+                padding: 10px;
+                align-items: center;
+            }
 
-      .main-content,
-      .sidebar {
-        width: 100%;
-      }
+            .main-content,
+            .sidebar {
+                width: 100%;
+            }
 
-      .sidebar {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-        margin-top: 20px;
-      }
+            .sidebar {
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+                margin-top: 20px;
+            }
 
-      .sidebar .ad {
-        width: 100%;
-        max-width: 100%;
-      }
+            .sidebar .ad {
+                width: 100%;
+                max-width: 100%;
+            }
 
-      .ad-center {
-        justify-content: center;
-        margin: 10px 0;
-      }
+            .ad-center {
+                justify-content: center;
+                margin: 10px 0;
+            }
 
-      .iframe-container {
-        width: 100%;
-        padding-top: 56.25%;
-      }
-    }
-  </style>
+            .iframe-container {
+                width: 100%;
+                padding-top: 56.25%;
+            }
+        }
+    </style>
 </head>
-
 <body>
+    <a href="https://w2.buffstreams24.sbs/"
+        style="display:inline-block; background-color:#1e242c; color:#58a6ff; padding:10px 16px; border-radius:8px; font-size:14px; font-weight:600; text-decoration:none; border:1px solid #30363d; margin-bottom: -10px; display:flex; align-items:center; gap:6px; width:fit-content; margin-top: 20px; margin-left: 550px;">
+        ← Back to Home
+    </a>
+    <div class="container">
+        <div class="content-box">
+            <section class="main-content">
+                <div class="ad-center">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': '1affd0df5f0aa4ec9c4aac51d7b2276b',
+                            'format': 'iframe',
+                            'height': 60,
+                            'width': 468,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript"
+                        src="//www.highperformanceformat.com/1affd0df5f0aa4ec9c4aac51d7b2276b/invoke.js"></script>
+                </div>
+                <div
+                    style="background-color:#1e242c; color:#ccc; padding:12px 16px; border-radius:8px; border:1px solid #30363d; margin-bottom:15px; font-size:14px; font-weight:500; text-align:center; box-shadow:0 0 6px rgba(0,0,0,0.2);">
+                    ⚠️ <strong>Note:</strong> StreamEast will be live <span style="color:#58a6ff;">15 minutes before the
+                        event starts</span>. Please check back shortly.
+                </div>
+                <div class="iframe-container">
+                    <iframe allow="encrypted-media" width="640" height="360" scrolling="no" id="frame-player"
+                        frameborder="0" allowfullscreen src=""></iframe>
+                </div>
+                <div class="ad-center">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': '6c8b2e342bc3150b1316c166262197fd',
+                            'format': 'iframe',
+                            'height': 50,
+                            'width': 320,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript"
+                        src="//www.highperformanceformat.com/6c8b2e342bc3150b1316c166262197fd/invoke.js"></script>
+                </div>
+            </section>
 
-  <div class="container">
-    <div class="content-box">
-      <section class="main-content">
-        <div class="ad-center">
-          <script type="text/javascript">
-            atOptions = {
-              'key': '1affd0df5f0aa4ec9c4aac51d7b2276b',
-              'format': 'iframe',
-              'height': 60,
-              'width': 468,
-              'params': {}
-            };
-          </script>
-          <script type="text/javascript"
-            src="//www.highperformanceformat.com/1affd0df5f0aa4ec9c4aac51d7b2276b/invoke.js"></script>
-        </div>
+            <aside class="sidebar">
+                <div class="ad">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': '6367168a6dcbc9d005a65a2770432a28',
+                            'format': 'iframe',
+                            'height': 250,
+                            'width': 300,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript"
+                        src="//www.highperformanceformat.com/6367168a6dcbc9d005a65a2770432a28/invoke.js"></script>
+                </div>
 
-        <div class="iframe-container">
-          <iframe allow="encrypted-media" width="640" height="360" scrolling="no" id="frame-player" frameborder="0"
-            allowfullscreen src=""></iframe>
+                <div class="ad">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': 'c056290ae6472fcc026e9aa3e4433ff2',
+                            'format': 'iframe',
+                            'height': 300,
+                            'width': 160,
+                            'params': {}
+                        };
+                    </script>
+                    <script type="text/javascript"
+                        src="//www.highperformanceformat.com/c056290ae6472fcc026e9aa3e4433ff2/invoke.js"></script>
+                </div>
+            </aside>
         </div>
-        <div class="ad-center">
-          <script type="text/javascript">
-            atOptions = {
-              'key': '6c8b2e342bc3150b1316c166262197fd',
-              'format': 'iframe',
-              'height': 50,
-              'width': 320,
-              'params': {}
-            };
-          </script>
-          <script type="text/javascript"
-            src="//www.highperformanceformat.com/6c8b2e342bc3150b1316c166262197fd/invoke.js"></script>
-        </div>
-      </section>
-
-      <aside class="sidebar">
-        <div class="ad">
-          <script type="text/javascript">
-            atOptions = {
-              'key': '6367168a6dcbc9d005a65a2770432a28',
-              'format': 'iframe',
-              'height': 250,
-              'width': 300,
-              'params': {}
-            };
-          </script>
-          <script type="text/javascript"
-            src="//www.highperformanceformat.com/6367168a6dcbc9d005a65a2770432a28/invoke.js"></script>
-        </div>
-
-        <div class="ad">
-          <script type="text/javascript">
-            atOptions = {
-              'key': 'c056290ae6472fcc026e9aa3e4433ff2',
-              'format': 'iframe',
-              'height': 300,
-              'width': 160,
-              'params': {}
-            };
-          </script>
-          <script type="text/javascript"
-            src="//www.highperformanceformat.com/c056290ae6472fcc026e9aa3e4433ff2/invoke.js"></script>
-        </div>
-      </aside>
     </div>
-  </div>
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const myParam = urlParams.get("frame");
+    <script>
+        const urlParams = new URLSearchParams(window.location.search);
+        const myParam = urlParams.get("frame");
 
-    let dPlayer = document.querySelector("#frame-player");
+        let dPlayer = document.querySelector("#frame-player");
 
-    dPlayer.src = myParam;
-  </script>
+        dPlayer.src = myParam;
+    </script>
 </body>
 
 </html>
