--- a/player.html
+++ b/player.html
@@ -138,7 +138,7 @@
                 </div>
                 <div
                     style="background-color:#1e242c; color:#ccc; padding:12px 16px; border-radius:8px; border:1px solid #30363d; margin-bottom:15px; font-size:14px; font-weight:500; text-align:center; box-shadow:0 0 6px rgba(0,0,0,0.2);">
-                    ⚠️ <strong>Note:</strong> StreamEast will be live <span style="color:#58a6ff;">15 minutes before the
+                    ⚠️ <strong>Note:</strong> Stream will be live <span style="color:#58a6ff;">15 minutes before the
                         event starts</span>. Please check back shortly.
                 </div>
                 <div class="iframe-container">
