--- a/index.html
+++ b/index.html
@@ -307,6 +307,18 @@
     </div>
 </div>
 
+                    <div class="match-link" data-league="Soccer" data-frame="https://topembed.pw/channel/TSN4[Canada]">
+    <div class="match-card">
+        <div class="match-league">
+            SOCCER
+        </div>
+        <div class="match-title">
+USA vs Mexico
+        </div>
+        <div class="match-time">July 6, 2025 - 7:00 AM ET</div>
+    </div>
+</div>
+
 
 
 <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ex7852767">
