--- a/player.html
+++ b/player.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <script type='text/javascript'
-        src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
+   <script type='text/javascript' src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BuffStreams - Live Streams</title>
@@ -124,17 +123,16 @@
         <div class="content-box">
             <section class="main-content">
                 <div class="ad-center">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '1affd0df5f0aa4ec9c4aac51d7b2276b',
-                            'format': 'iframe',
-                            'height': 60,
-                            'width': 468,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/1affd0df5f0aa4ec9c4aac51d7b2276b/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '1affd0df5f0aa4ec9c4aac51d7b2276b',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/1affd0df5f0aa4ec9c4aac51d7b2276b/invoke.js"></script>
                 </div>
                 <div
                     style="background-color:#1e242c; color:#ccc; padding:12px 16px; border-radius:8px; border:1px solid #30363d; margin-bottom:15px; font-size:14px; font-weight:500; text-align:center; box-shadow:0 0 6px rgba(0,0,0,0.2);">
@@ -146,47 +144,44 @@
                         frameborder="0" allowfullscreen src=""></iframe>
                 </div>
                 <div class="ad-center">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '6c8b2e342bc3150b1316c166262197fd',
-                            'format': 'iframe',
-                            'height': 50,
-                            'width': 320,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/6c8b2e342bc3150b1316c166262197fd/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '6c8b2e342bc3150b1316c166262197fd',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6c8b2e342bc3150b1316c166262197fd/invoke.js"></script>
                 </div>
             </section>
 
             <aside class="sidebar">
                 <div class="ad">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': '6367168a6dcbc9d005a65a2770432a28',
-                            'format': 'iframe',
-                            'height': 250,
-                            'width': 300,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/6367168a6dcbc9d005a65a2770432a28/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : '6367168a6dcbc9d005a65a2770432a28',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/6367168a6dcbc9d005a65a2770432a28/invoke.js"></script>
                 </div>
 
                 <div class="ad">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': 'c056290ae6472fcc026e9aa3e4433ff2',
-                            'format': 'iframe',
-                            'height': 300,
-                            'width': 160,
-                            'params': {}
-                        };
-                    </script>
-                    <script type="text/javascript"
-                        src="//www.highperformanceformat.com/c056290ae6472fcc026e9aa3e4433ff2/invoke.js"></script>
+                   <script type="text/javascript">
+	atOptions = {
+		'key' : 'c056290ae6472fcc026e9aa3e4433ff2',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c056290ae6472fcc026e9aa3e4433ff2/invoke.js"></script>
                 </div>
             </aside>
         </div>
